--- a/i3/config
+++ b/i3/config
@@ -195,7 +195,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-#default_border pixel 0
+default_border pixel 0
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -237,3 +237,9 @@ client.unfocused         $overlay0 $base  $text    $rosewater $overlay0
 client.urgent            $peach    $base  $peach   $overlay0  $peach
 client.placeholder       $overlay0 $base  $text    $overlay0  $overlay0
 client.background        $base
+
+# gaps
+
+gaps inner 10
+
+smart_gaps off
